--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<!DOCTYPE html><html><head><title>TalentCraftByMohit</title></head><body><h1>Welcome to TalentCraftByMohit</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TalentCraftByMohit</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>TalentCraftByMohit</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="jobs.html">Jobs</a>
+      <a href="apply-now.html">Apply</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section id="hero">
+    <h2>Your Career Starts Here</h2>
+    <p>Connecting talent with opportunity across India.</p>
+    <a href="apply-now.html" class="button">Apply Now</a>
+  </section>
+
+  <section id="features">
+    <h3>Why Choose Us?</h3>
+    <ul>
+      <li>Verified Employers</li>
+      <li>Latest Job Updates</li>
+      <li>Personalized Career Help</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 TalentCraftByMohit | All rights reserved.</p>
+  </footer>
+</body>
+</html>
