--- a/about.html
+++ b/about.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>About Us</title></head><body><h1>About TalentCraftByMohit</h1></body></html>
+<h1>About Us</h1><p>We connect talent with top companies.</p>
