--- a/index.html
+++ b/index.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TalentCraftByMohit</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TalentCraftByMohit</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>TalentCraftByMohit</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="jobs.html">Jobs</a>
-      <a href="apply-now.html">Apply</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <section id="hero">
-    <h2>Your Career Starts Here</h2>
-    <p>Connecting talent with opportunity across India.</p>
-    <a href="apply-now.html" class="button">Apply Now</a>
-  </section>
-  <footer>
-    <p>&copy; 2025 TalentCraftByMohit | All rights reserved.</p>
-  </footer>
+    <header>
+        <section id="hero">
+            <div class="container">
+                <h1>Welcome to TalentCraftByMohit</h1>
+                <p>Your dream job is just a click away!</p>
+                <a href="apply-now.html" class="btn">Apply Now</a>
+            </div>
+        </section>
+    </header>
+
+    <section id="job-categories">
+        <div class="container">
+            <h2>Featured Job Categories</h2>
+            <div class="categories">
+                <div class="category">
+                    <h3>IT</h3>
+                    <p>Explore job opportunities in IT and tech fields</p>
+                </div>
+                <div class="category">
+                    <h3>BPO</h3>
+                    <p>Customer service roles across the globe</p>
+                </div>
+                <div class="category">
+                    <h3>Sales</h3>
+                    <p>Top sales positions with high earning potential</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonials">
+        <div class="container">
+            <h2>What Our Clients Say</h2>
+            <div class="carousel">
+                <div class="testimonial">
+                    <p>"TalentCraftByMohit helped me land my dream job in just 2 weeks!"</p>
+                    <p>- John Doe, IT Developer</p>
+                </div>
+                <div class="testimonial">
+                    <p>"Thanks to TalentCraftByMohit, I got the perfect sales position."</p>
+                    <p>- Jane Smith, Sales Executive</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
