--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,39 @@
-<h1>Contact Us</h1><p>Email us at telentcraftbymohit@gmail.com</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact | Telentcraftbymohit</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Telentcraftbymohit</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="jobs.html">Jobs</a></li>
+          <li><a href="post-job.html">Post a Job</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="container">
+    <h2>Content for Contact Page</h2>
+  </div>
+  <footer>
+    <div class="container">
+      <p>Call us: 7489617529 | Email: telentcraftbymohit@gmail.com</p>
+      <div class="social-links">
+        <a href="#">Instagram</a>
+        <a href="#">WhatsApp</a>
+        <a href="#">YouTube</a>
+        <a href="#">Facebook</a>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
