--- a/jobseekers.html
+++ b/jobseekers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy | Telentcraftbymohit</title>
+  <title>Jobseekers | Telentcraftbymohit</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     </div>
   </header>
   <div class="container">
-    <h2>Content for Privacy Page</h2>
+    <h2>Content for Jobseekers Page</h2>
   </div>
   <footer>
     <div class="container">
